k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golovanov-ingress
  namespace: golovanov
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - golovanov.me
      secretName: golovanov-tls
  rules:
    - host: golovanov.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: golovanov
                port:
                  number: 14450
